--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@
 body {
     background: var(--bg-color);
     color: var(--text-color);
-    background-color: cornsilk;
+    /* background-color: cornsilk; */
 }
 
 
