--- a/style.css
+++ b/style.css
@@ -64,10 +64,15 @@ header {
     box-shadow: -3px -3px 7px #ffffff73, 2px 2px 5px rgba(94, 104, 121, 0.288);
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&display=swap');
+
 .logo {
-    font-size: 1.61rem;
+    font-size: 1.59rem;
+    font-family: 'Dancing Script', cursive;
+
     font-weight: 600;
     color: var(--text-color);
+    font-style: oblique;
 }
 
 .navbar {
@@ -192,6 +197,7 @@ header {
 
 .slider img {
     width: 100%;
+    height: 100%;
     border-radius: 0.7rem;
 }
 
@@ -203,6 +209,8 @@ header {
 .home-text h1 {
     font-size: var(--big-font);
     font-weight: bold;
+    font-family: 'Dancing Script', cursive;
+    padding: 10px;
 }
 
 .home-text h2 {
