Change home background color to #F9E7B2

--- a/style.css
+++ b/style.css
@@ -169,7 +169,7 @@ header {
 /*=====================home section============================*/
 
 .home-bg {
-    background-color: #FFE5CF;
+    background-color: #F9E7B2;
     margin-left: 4%;
     margin-right: 4%;
 
